packages/styles/scss/components/mg-illustrated-message.scss
/*!
 * @prop --mg-c-illustrated-message-spacing-vertical: Defines the vertical padding of the illustrated message. Default value: `--mg-b-size-40`.
 */

.mg-c-illustrated-message {
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
  justify-content: center;
  padding: var(--mg-c-illustrated-message-spacing-vertical) var(--mg-b-size-16);
  margin: auto;
  gap: var(--mg-b-size-16) var(--mg-b-size-64);
  max-inline-size: calc(60 * var(--mg-b-size-8)); // 480px;
  text-align: center;

  &__illustration {
    max-block-size: calc(15 * var(--mg-b-size-8)); // 120px;

    ::slotted([slot='illustration']) {
      block-size: auto;
      inline-size: 100%;
      max-block-size: calc(15 * var(--mg-b-size-8)); // 120px;
      max-inline-size: calc(15 * var(--mg-b-size-8)); // 120px;
    }
  }

  &__slots {
    display: flex;
    flex-direction: column;
    gap: var(--mg-b-size-8);

    ::slotted([slot='title']) {
      margin: 0;
      font-family: var(--mg-b-font-family-heading) !important; /* stylelint-disable-line declaration-no-important */
      font-size: var(--mg-b-font-size-h2) !important; /* stylelint-disable-line declaration-no-important */
    }

    ::slotted([slot='details']) {
      margin: 0;
    }
  }

  /**
   * Sizes
   */
  &.mg-c-illustrated-message--size-small {
    --mg-c-illustrated-message-spacing-vertical: var(--mg-b-size-24);

    .mg-c-illustrated-message__slots {
      gap: calc(var(--mg-b-size-4) / 2);
    }

    .mg-c-illustrated-message__illustration {
      max-block-size: var(--mg-b-size-64);

      ::slotted([slot='illustration']) {
        max-block-size: var(--mg-b-size-64);
        max-inline-size: var(--mg-b-size-64);
      }
    }
  }

  &.mg-c-illustrated-message--size-large {
    .mg-c-illustrated-message__illustration {
      max-block-size: calc(23 * var(--mg-b-size-8)); // 184px;

      ::slotted([slot='illustration']) {
        max-block-size: calc(23 * var(--mg-b-size-8)); // 184px;
        max-inline-size: calc(23 * var(--mg-b-size-8)); // 184px;
      }
    }
  }

  /**
   * Directions
   */
  &.mg-c-illustrated-message--direction-horizontal {
    max-inline-size: unset;

    .mg-c-illustrated-message__slots {
      max-inline-size: calc(60 * var(--mg-b-size-8)); // 480px;
    }
  }

  @container (width > 52.8rem) {
    &.mg-c-illustrated-message--direction-horizontal {
      flex-direction: row;
      align-items: center;
      column-gap: var(--mg-b-size-48);
      text-align: left;

      .mg-c-illustrated-message__slots {
        max-inline-size: unset;
      }

      .mg-c-illustrated-message__illustration {
        flex: 1 0 auto;
        max-inline-size: fit-content;
      }

      &.mg-c-illustrated-message--size-small {
        column-gap: var(--mg-b-size-24);
      }

      &.mg-c-illustrated-message--size-large {
        column-gap: var(--mg-b-size-64);
      }
    }
  }
}

:host {
  display: block;
  container-type: inline-size;
}

